user roles + ping page + command for temperature specific to id

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,12 +3,16 @@
     <h1>Hi <%= name %></h1>
     <h3>Role: <%= role %></h3>
     <br><br>
-    <form method = "GET" action = "/test" enctype = "multipart/form-data" >
-        <input type="submit" type="text" value="Test Page">
+    <form method = "GET" action = "/command" enctype = "multipart/form-data" >
+        <input type="submit" type="text" value="Command Page">
     </form>
     <br>
     <form method = "GET" action = "/upload" enctype = "multipart/form-data" >
         <input type="submit" type="text" value="Upload Page">
+    </form>
+    <br>
+    <form method = "GET" action = "/devices" enctype = "multipart/form-data" >
+        <input type="submit" type="text" value="Devices">
     </form>
 </center>
 <body>
