Content Management (All basic except MQTT)

--- a/views/command.ejs
+++ b/views/command.ejs
@@ -12,11 +12,29 @@
         })
         $('#retrieve').submit((event)=>{
             event.preventDefault()
-            var filename = $('#filename').val()
+            var playlist = $('#playlist').val()
             $.post('/files/retrieve', {
-                filename: filename,
+                playlist: playlist,
             }, (data)=>{
                 $('#retrieveResult').html(data)
+            })
+        })
+        $('#delete').submit((event)=>{
+            event.preventDefault()
+            var filename = $('#filename').val()
+            $.post('/files/delete', {
+                filename: filename,
+            }, (data)=>{
+                $('#deleteResult').html(data)
+            })
+        })
+        $('#deletePlaylist').submit((event)=>{
+            event.preventDefault()
+            var delPlay = $('#delPlay').val()
+            $.post('/files/deletePlaylist', {
+                delPlay: delPlay,
+            }, (data)=>{
+                $('#deletePlaylistResult').html(data)
             })
         })
     })  
@@ -36,16 +54,30 @@ Temperature
     <input type="submit" value="Upload" />
 </form>
 
- <!-- <form action="/files/upload"  enctype="multipart/form-data" method="POST">
-    <input type="file" name="files" multiple>
-    <input type="submit" value="Upload your files"/>
- </form> -->
-
 <p>Retrieve Playlist</p>
 <form id="retrieve">
-    <input type="text" id="filename">
+    <input type="text" id="playlist">
     <input type="submit" value="Get Playlist"/>
 </form>
 <span id="retrieveResult"></span>
+
+<p>Delete File</p>
+<form id="delete">
+    <input type="text" id="filename">
+    <input type="submit" value="Delete"/>
+</form>
+<span id="deleteResult"></span>
+
+<p>Delete Playlist</p>
+<form id="deletePlaylist">
+    <input type="text" id="delPlay">
+    <input type="submit" value="Delete"/>
+</form>
+<span id="deletePlaylistResult"></span>
+
+<p>Create Playlist</p>
+<form action="/files/playlist" method="GET">
+    <input type="submit" value="Create" />
+</form>
 </body>
 </html>
