--- a/views/playlist.ejs
+++ b/views/playlist.ejs
@@ -43,7 +43,8 @@
             var popup = document.getElementById('chooseMedia')
             var addLine = "<tr> <td>" + count + ". </td> <td>" + chosen
             if (chosen.match(/.*\.(gif|jpe?g|bmp|png)$/igm) != null){
-                addLine += "</td> <td> <input type='number' step='0.1' class='duration' id='dur_" + count + "' placeholder='Duration (in sec)' required />"
+                var id = count - 1
+                addLine += "</td> <td> <input type='number' step='0.1' class='duration' id='dur_" + id + "' placeholder='Duration (in sec)' required />"
             }
             addLine += "</td></tr>"
             count++
@@ -54,7 +55,6 @@
             event.preventDefault()
 
             var playlist = []
-            var imgConfig = []
             var screens = $('#length').val()
             var screenTable = document.getElementById('screenTable')
             var entries = screenTable.getElementsByTagName('tr')
@@ -62,32 +62,46 @@
             for (var i = 1; i < entries.length-1; i++){
                 var td = entries[i].getElementsByTagName('td')
                 console.log(td)
-                playlist.push(td[1].innerText)
+                playlist.push([td[1].innerText])
             }
             var imgs = document.getElementsByClassName('duration')
             for (var i = 0; i < imgs.length; i++){
                 var id = imgs[i].getAttribute('id')
-                imgConfig.push([$('#'+id).val(), id.split('_')[1]])
+                playlist[id.split('_')[1]].push(parseInt($('#'+id).val()))
             }
             console.log(playlist)
-            console.log(imgConfig)
 
             var checkedScreen = false
             if (document.getElementById('splitScreen').checked){
                 checkedScreen = true
             }
-            
-            console.log(checkedScreen)
-            var playlistName = $('#playlistName').val()
             var orientation = $('#orientation').val()
+            var aspectRatio = []
+            if (orientation.toUpperCase() == "LANDSCAPE"){
+                aspectRatio = [16,9]
+            }else{
+                aspectRatio = [9,16]
+            }
+            var ratio = 0
+            if (checkedScreen == true){
+                ratio = 0.5
+            }else{
+                ratio = parseInt(screens)
+            }
+            if ((orientation.toUpperCase() == "PORTRAIT") && (ratio == 0.5)){
+                aspectRatio = [aspectRatio[0], aspectRatio[1] * ratio]
+            }else{
+                aspectRatio = [aspectRatio[0] * ratio, aspectRatio[1]]
+            }
+            console.log(aspectRatio)
+            var playlistName = $('#playlistName').val()
 
             $.post('/files/createPlaylist', {
                 playlist: playlist,
-                imgConfig: imgConfig,
                 screens: screens,
-                checkedScreen: checkedScreen,
                 orientation: orientation,
                 playlistName: playlistName,
+                aspectRatio: aspectRatio
             }, (data)=>{
                 $('#playlistResult').html(data)
             })
@@ -144,7 +158,7 @@
             
         </tbody>
         <tfoot>
-            <tr><td><input type='button' onclick='showFilenames()' value='Add new entry'/> </td> </tr>
+            <tr><td colspan="3"><input type='button' onclick='showFilenames()' value='Add new entry'/> </td> </tr>
         </tfoot>
     </table>
     <hr>
