Added preview for scheduling

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,5 +14,17 @@
     <form method = "GET" action = "/devices" enctype = "multipart/form-data" >
         <input type="submit" type="text" value="Devices">
     </form>
+    <br>
+    <form method = "GET" action = "/media" enctype = "multipart/form-data" >
+        <input type="submit" type="text" value="View Media">
+    </form>
+    <br>
+    <form method = "GET" action = "/viewPlaylist" enctype = "multipart/form-data" >
+        <input type="submit" type="text" value="View Playlists">
+    </form>
+    <br>
+    <form method = "GET" action = "/viewSchedule" enctype = "multipart/form-data" >
+        <input type="submit" type="text" value="View Schedules">
+    </form>
 </center>
 <body>
